fixed br spacing on mobile

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -65,6 +65,10 @@ a {
   text-decoration: none;
 }
 
+br {
+  line-height: 0;
+}
+
 * {
   box-sizing: border-box;
 }
